[gd_scene load_steps=5 format=2]

[ext_resource path="res://shared/attacks/lightningAttack/LightningAttack.gd" type="Script" id=1]
[ext_resource path="res://shared/attacks/lightningAttack/lightning1.png" type="Texture" id=2]
[ext_resource path="res://shared/attacks/lightningAttack/lightning2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 404, 235 )

[node name="LightningAttack" type="Area2D" index="0"]

position = Vector2( 1, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="LightningStrikeTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="Lightning1" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( -1, 8 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Lightning2" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( -1, 9.53674e-007 )
scale = Vector2( 1.025, 1 )
texture = ExtResource( 3 )

[connection signal="timeout" from="LightningStrikeTimer" to="." method="_on_Timer_timeout"]


